src/test/ui/feature-gates/feature-gate-transparent_enums.stderr
error[E0658]: transparent enums are unstable
  --> $DIR/feature-gate-transparent_enums.rs:2:1
   |
LL | enum OkButUnstableEnum {
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #60405 <https://github.com/rust-lang/rust/issues/60405> for more information
   = help: add `#![feature(transparent_enums)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
