src/test/ui/feature-gates/feature-gate-transparent_enums.rs
#[repr(transparent)]
enum OkButUnstableEnum { //~ ERROR transparent enums are unstable
    Foo((), String, ()),
}

fn main() {}
